# Auroras-crosshair-overlay

./: .gitignore  AuroraCrosshairDX.sln  BUILD_GUIDE.md  CHANGELOG.md  CHECKLIST.md  COMPLETION_REPORT.md  CONFIGURATION.md  DEVELOPMENT_ROADMAP.md  GETTING_STARTED.md  INDEX.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  README_FIRST.md  START_HERE.md  overlay_config.txt  test_dx.cpp  utils.h
AuroraCrosshairDX/: AuroraCrosshairDX.vcxproj  README.md
AuroraCrosshairDX/include/: CrosshairManager.h  DXRenderer.h  Window.h  stb_image.h
AuroraCrosshairDX/src/: CrosshairManager.cpp  DXRenderer.cpp  Window.cpp  main.cpp  main_v2.cpp
CrosshairGUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  build.bat  gui.py  run_gui.bat
